<resources>
    <string name="app_name">Canteen App</string>
    <string name="submit_order_label">Submit Order</string>
    <string name="scan_qrcode_label">Scan canteen QR code</string>
    <string name="place_order_label">Place Order</string>
    <string name="add_canteen_activity_label">Add canteen</string>
    <string name="saved_canteen_activity_label">Saved canteens</string>
    <string name="button_saved_canteen">Saved Canteens</string>
    <string name="button_add_canteen">Add Canteen</string>
    <string name="button_scan_qrcode">Scan QR Code</string>
    <string name="qrcode">qrcode</string>
    <string name="food_edittext_placeholder">quantity</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">food description</string>
    <string name="food_item_quantity">food_item_quantity</string>
    <string name="save_data_file">localDB.json</string>
    <string name="canteenURL">canteenURL</string>
    <string name="canteenDataURL">fetch.php</string>
    <string name="canteenOrderURL">order.php</string>
    <string name="canteen_url_detect_error">Could not detect Canteen</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="loading_canteen_name">Loading&#8230;</string>
    <string name="json_canteen_name">name</string>
    <string name="json_item_list">item_list</string>
    <string name="json_item_name">name</string>
    <string name="json_item_price">price</string>
    <string name="json_item_quantity">quantity</string>
    <string name="json_item_imageURL">imageURL</string>
    <string name="json_item_description">description</string>
    <string name="btn_place_order">Done</string>
    <string name="final_order">final_orders</string>
    <string name="food_price_default">-</string>
    <string name="order_summary">Order Summary</string>
    <string name="btn_submit">Submit</string>
    <string name="empty"> </string>
    <string name="success_order">Your order is being prepared</string>
    <string name="failed_order">Could not place order</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
</resources>
