<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/food_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/food_item_padding_left"
        android:paddingTop="@dimen/food_item_padding_top"
        android:paddingRight="@dimen/food_item_padding_left"
        android:paddingBottom="@dimen/food_item_padding_bottom"
        android:text="@string/food_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/food_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_description"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/food_name"
        android:ems="10"
        android:hint="@string/food_edittext_placeholder"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/food_description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:labelFor="@id/food_quantity"
        android:paddingLeft="@dimen/food_item_padding_left"
        android:paddingRight="@dimen/food_item_padding_left"
        android:text="@string/food_description"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/food_price"
        android:layout_width="@dimen/food_item_price_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/food_price_default"
        android:textSize="18sp" />

</RelativeLayout>