<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubmitOrderActivity">

    <TextView
        android:id="@+id/canteen_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/canteen_name_padding_left"
        android:paddingRight="@dimen/canteen_name_padding_left"
        android:text="@string/order_summary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/final_order_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/final_summary_padding_left"
        android:layout_marginTop="@dimen/final_summary_margin_top"
        android:text="@string/empty"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/empty"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_submit_order"
        android:layout_width="@dimen/btn_place_order_width"
        android:layout_height="@dimen/btn_place_order_height"
        android:layout_gravity="end"
        android:onClick="submitOrder"
        android:text="@string/btn_submit"
        android:visibility="gone" />

    <TextView
        android:id="@+id/order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_status_margin_top"
        android:textSize="20sp"
        android:text="@string/empty"
        android:visibility="gone"
        android:textAlignment="center" />

</LinearLayout>